<resources>
    <string name="app_name">Tricho Log</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trich_info_02">Trichotillomania affects both adults and children, though it often begins in childhood or adolescence. It is estimated to affect about 1–2% of the population</string>
    <string name="trich_info_01">Trichotillomania is a mental health disorder characterized by the compulsive urge to pull out one’s hair, leading to noticeable hair loss.</string>
    <string name="trich_info_03">Increasing awareness and understanding of trichotillomania can help reduce stigma and encourage individuals to seek help.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="email_is_empty">Email is empty</string>
    <string name="please_enter_proper_email">Please enter proper email</string>
    <string name="username_is_empty">Username is empty</string>
    <string name="username_should_have_more_than_3_characters">Username should have more than 3 characters</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="password_should_have_more_than_4_characters">Password should have more than 4 characters</string>
    <string name="field_is_empty">Field is empty</string>
    <string name="password_do_not_match">Password do not match</string>
    <string name="hello_friend">Hello Friend</string>
    <string name="trich_intro_01">Welcome to Trichlog. Congratulations for taking first steps in this journey. We are here to raise awareness regarding trichotillomania and guide you</string>
    <string name="trich_intro_02">Our goal is to help you identify triggers and help you overcome the urges. If you are ready to start the journey please go On!</string>
    <string name="did_you_know">Did you know?</string>
    <string name="in_order_to_proceed_you_need_to_have_an_account">In order to proceed you need to have an account:</string>
    <string name="password">password</string>
    <string name="repeat_password">repeat password</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="network_issues">Network issues</string>
    <string name="password_is_too_weak">Password is too weak</string>
    <string name="unknown_error">Unknown error</string>
    <string name="wrong_email_or_password">Wrong email or password</string>
    <string name="register_successful">Register Successful!</string>
    <string name="articles">Articles</string>
    <string name="home">Home</string>
    <string name="logs">Logs</string>
    <string name="min">min</string>
    <string name="read_more">Read more</string>
    <string name="helpful_articles">Helpful Articles</string>
    <string name="add">add</string>
    <string name="create_log">Create log</string>
    <string name="add_log">Add Log</string>
    <string name="what_was_the_trigger">What was the trigger?</string>
    <string name="trigger">trigger</string>
    <string name="describe_your_feelings">Describe your feelings</string>
    <string name="i_will_prevent_this_by">I will prevent this by...</string>
    <string name="trigger_field_is_empty">Trigger field is empty</string>
    <string name="body_field_is_empty">Body field is empty</string>
    <string name="you_don_t_have_logs_yet">You don\'t have logs yet</string>
    <string name="timer_format">%1$d day %2$02d:%3$02d:%4$02d</string>
    <string name="time_since_your_last_log">Time since your last log:</string>
    <string name="log_out">Log Out</string>
</resources>