<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.landing.pager.InfoFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_lg"
        android:text="@string/did_you_know"
        android:textSize="@dimen/text_lg"
        app:fontFamily="@font/roboto_bold_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:alpha="0"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_kodee_sharing"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="@dimen/distance_sm"
        android:layout_marginTop="@dimen/distance_sm"
        android:src="@drawable/kodee_sharing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header"
        android:alpha="0"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_info_01"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/trich_info_01"
        app:layout_constraintBottom_toBottomOf="@id/iv_kodee_sharing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_kodee_sharing"
        app:layout_constraintTop_toTopOf="@id/iv_kodee_sharing"
        android:alpha="0"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_kodee_sitting"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/kodee_sitting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_kodee_sharing"
        android:alpha="0"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_info_02"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/distance_sm"
        android:text="@string/trich_info_02"
        app:layout_constraintBottom_toBottomOf="@id/iv_kodee_sitting"
        app:layout_constraintEnd_toStartOf="@id/iv_kodee_sitting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_kodee_sitting"
        android:alpha="0"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_kodee_jumping"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/kodee_jumping"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_kodee_sitting"
        android:alpha="0"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_info_03"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/distance_sm"
        android:text="@string/trich_info_03"
        app:layout_constraintBottom_toBottomOf="@id/iv_kodee_jumping"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_kodee_jumping"
        app:layout_constraintTop_toTopOf="@id/iv_kodee_jumping"
        android:alpha="0"
        />


</androidx.constraintlayout.widget.ConstraintLayout>