<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.landing.pager.IntroFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_lg"
        android:alpha="0"
        android:text="@string/hello_friend"
        android:textSize="@dimen/text_lg"
        android:textAlignment="center"
        app:fontFamily="@font/roboto_bold_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_kodee_greeting"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="@dimen/distance_sm"
        android:layout_marginTop="@dimen/distance_lg"
        android:alpha="0"
        android:src="@drawable/kodee_greeting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        android:paddingHorizontal="@dimen/distance_sm"
        android:text="@string/trich_intro_01"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_kodee_greeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_kodee_greeting"
        app:layout_constraintTop_toTopOf="@id/iv_kodee_greeting" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_sm"
        android:alpha="0"
        android:paddingHorizontal="@dimen/distance_lg"
        android:text="@string/trich_intro_02"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description" />


</androidx.constraintlayout.widget.ConstraintLayout>