<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.tricholog.ui.authentication.login.LoginFragment">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/text_lg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/distance_lg"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/distance_md"
        android:src="@drawable/reading_illustration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header"
        app:layout_constraintWidth_percent="0.6" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/distance_md"
        android:layout_marginBottom="@dimen/distance_md"
        android:hint="@string/email"
        app:errorIconTint="@color/desire"
        app:errorTextColor="@color/desire"
        app:layout_constraintBottom_toTopOf="@id/tl_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_height="50dp"
            android:background="@drawable/btn_background"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/distance_md"
        android:layout_marginBottom="@dimen/distance_md"
        android:hint="@string/password"
        app:errorIconDrawable="@null"
        app:errorIconTint="@color/desire"
        app:errorTextColor="@color/desire"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:background="@drawable/btn_background"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/distance_md"
        android:layout_marginBottom="@dimen/distance_lg"
        android:background="@drawable/btn_background"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/mountain_lake_green"
        android:textSize="@dimen/text_md"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar

        android:translationZ="2dp"
        android:visibility="gone"
        android:id="@+id/pb_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tl_email"
        app:layout_constraintStart_toStartOf="@id/btn_login" />







</androidx.constraintlayout.widget.ConstraintLayout>